force-app/main/default/objects/Job_Application__c/fields/AI_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>AI_Debug_Log__c</fullName>
    <label>AI Debug Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>