force-app/main/default/objects/Job_Application__c/fields/Company_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Text__c</fullName>
    <label>Company Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>