force-app/main/default/objects/Job_Application__c/fields/Good_Example_For_AI__c.field-meta.xml
<CustomField>
    <fullName>Good_Example_For_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good Example For AI</label>
    <type>Checkbox</type>
</CustomField>