force-app/main/default/objects/Job_Application__c/fields/Job_Hash__c.field-meta.xml
<CustomField>
    <fullName>Job_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Job Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>