force-app/main/default/objects/Job_Application__c/fields/Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Job_Key__c</fullName>
    <externalId>true</externalId>
    <label>Job Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>