force-app/main/default/objects/Job_Application__c/fields/Match_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Match_Explanation__c</fullName>
    <label>Match Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>