force-app/main/default/objects/Job_Application__c/fields/Outreach_Draft__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Draft__c</fullName>
    <label>Outreach Draft</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>