force-app/main/default/objects/Job_Application__c/fields/Primary_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rejection_Reason__c</fullName>
    <label>Primary_Rejection_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ghost Job</fullName>
            </value>
            <value>
                <fullName>Sales Role (Anti-Sales)</fullName>
            </value>
            <value>
                <fullName>Mismatch (Heavy Dev)</fullName>
            </value>
            <value>
                <fullName>Location Mismatch</fullName>
            </value>
            <value>
                <fullName>Manual Rejection</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Mismatch</fullName>
            </value>
            <value>
                <fullName>Sales Role</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>