force-app/main/default/objects/Job_Application__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <label>Prompt Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>