force-app/main/default/objects/Job_Application__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>