force-app/main/default/objects/Job_Application__c/fields/Strategy_Note__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Note__c</fullName>
    <label>Strategy Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>