force-app/main/default/objects/Job_Application__c/fields/Time_Saved_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Saved_Minutes__c</fullName>
    <formula>CASE(Status__c,
  &quot;Archived&quot;, 2,       /* Tier 1: AI Noise Reduction (Anti-Sales/Ghost) */
  &quot;AI Analyzed&quot;, 15,   /* Tier 2: Technical Review Ready */
  &quot;Applied&quot;, 30,       /* Tier 3: Technical Solution Proposal */
  &quot;Interviewing&quot;, 30,
  &quot;Offer&quot;, 30,
  0                    /* Tier 0: Raw/New/Processing */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Saved (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>